# bb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
bb/: __init__.py  __main__.py  cli.py  frontmatter.py  memory.py  ticket.py  wiki.py
bb/data/: __init__.py  bb_qa_tickets.py
tests/: conftest.py  test_memory.py  test_ticket.py
