[project]
name = "bb"
version = "0.1.0"
description = "Brown Biotech CLI — thin memory-ops wrapper over bb-wiki (remember/recall/forget/status)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Brown Biotech", email = "ops@brownbio.tech" }]
keywords = ["brown-biotech", "knowledge-graph", "memory", "cli", "wiki", "karpathy-llm-wiki"]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.5",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
bb = "bb.cli:app"

[project.urls]
Homepage = "https://github.com/ohbryt/bb"
Issues = "https://github.com/ohbryt/bb/issues"
Source = "https://github.com/ohbryt/bb"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"